# Robotics

2DOF-IK-for-Jaco-master/: CMakeLists.txt  package.xml
2DOF-IK-for-Jaco-master/src/: Simple_IK_virtual_robot.cpp  Yeah_virtual_robot_demo.cpp  teleop_key.cpp  template.cpp  test.cpp
SI100C-Robot-Lab-master/: canny_detector.py  follow_node.py  hough_square_detector.py  joystick.py  keyop.py  listener.py  measure.py  race4.py  ransac_circle_detector.py  talker.py
Take-Place_Demo_Jaco-master/: my_demo.cpp  my_demo.h
